# infosystem

./: CMakeLists.txt  Main.qml  README.md  SystemProvider.cpp  SystemProvider.h  main.cpp  mediaplayer.cpp  mediaplayer.h  meteomaticsbackend.cpp  meteomaticsbackend.h  providerapi.cpp  providerapi.h  weathermodel.cpp  weathermodel.h
UI/: BackUpCamera.qml  Clock.qml  CurrentWeatherIcon.qml  ForecastIcon.qml  Gmap.qml  LineGuide.qml  MediaPlayer.qml  MiniPlayer.qml  Settings.qml  currentForecastIcon.qml  tester.qml  weatherForecast.qml  weatherIcon.qml
UI/meshes/: cube_003_mesh.mesh
demoImages/: desktop.ini
